# darlingserver

./: CMakeLists.txt
duct-tape/: CMakeLists.txt  README.md
duct-tape/defines/: mach_debug.h  mach_ipc_debug.h  xpr_debug.h  zone_debug.h
duct-tape/defines/sys/: kdebug_private.h
duct-tape/include/darlingserver/: duct-tape.h
duct-tape/include/darlingserver/duct-tape/: hooks.h  types.h
duct-tape/internal-include/darlingserver/duct-tape/: condvar.h  hooks.h  hooks.internal.h  kqchan.h  locks.h  log.h  memory.h  processor.h  psynch.h  semaphore.h  simple_lock.h  stubs.h  task.h  thread.h
duct-tape/pthread/: kern_internal.h  kern_synch.c  private  workqueue_internal.h
duct-tape/src/: condvar.c  debug.c  host.c  init.c  kqchan.c  locks.c  memory.c  misc.c  processor.c  psynch.c  semaphore.c  stubs.c  task.c  thread.c  timer.c  traps.c
duct-tape/xnu/EXTERNAL_HEADERS/: stdatomic.h
duct-tape/xnu/bsd/libkern/: libkern.h
duct-tape/xnu/bsd/sys/: proc_internal.h  types.h
duct-tape/xnu/osfmk/arm/: cpu_data.h  locks.h  pmap.h  rtclock.c  simple_lock.h
duct-tape/xnu/osfmk/i386/: cpu_data.h  cpu_threads.h  locks.h  rtclock.c  simple_lock.h  thread.h
duct-tape/xnu/osfmk/ipc/: ipc_entry.c  ipc_importance.c  ipc_init.c  ipc_kmsg.h  ipc_mqueue.c  ipc_object.c  ipc_pset.c  ipc_table.c  ipc_voucher.c  mach_kernelrpc.c  mig_log.c
duct-tape/xnu/osfmk/kern/: assert.h  exception.c  host.c  host_notify.c  ipc_kobject.c  ipc_tt.c  locks.h  ltable.c  misc_protos.h  mk_timer.c  processor.h  startup.h  task.h  task_ident.c  thread_call.c  timer_call.c  turnstile.c  ux_handler.c  waitq.c  waitq.h
duct-tape/xnu/osfmk/libsa/: types.h
duct-tape/xnu/osfmk/libsa/arm/: types.h
duct-tape/xnu/osfmk/mach/: vm_param.h
duct-tape/xnu/osfmk/prng/: prng_random.c
duct-tape/xnu/osfmk/vm/: vm32_user.c  vm_kern.h  vm_map.h
duct-tape/xnu/pexpert/pexpert/arm64/: VMAPPLE.h
duct-tape/xnu/san/: kasan.h
include/darlingserver/: rpc-supplement.h
internal-include/darlingserver/: async-writer.hpp  call.hpp  config.hpp  kqchan.hpp  logging.hpp  message.hpp  monitor.hpp  process.hpp  registry.hpp  server.hpp  stack-pool.hpp  thread.hpp  utility.hpp  workers.hpp
scripts/: generate-rpc-wrappers.py
src/: async-writer.cpp  call.cpp  darlingserver.cpp  kqchan.cpp  logging.cpp  message.cpp  process.cpp  server.cpp  stack-pool.cpp  thread.cpp  utility.cpp
tools/: CMakeLists.txt  dserverdbg-rpc-defs.h  dserverdbg.c
